--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 :root {
   /* CSS HEX */
   --light: #dce0d9ff;
@@ -5,4 +6,168 @@
   --coral: #f78e69ff;
   --dark: #131b23ff;
   --plum-web: #ffaaeaff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  box-sizing: border-box;
+  min-width: 320px;
+  min-height: 100vh;
+  font-family: "Noto Sans", sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+h4 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+h5 {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+main {
+  min-height: calc(100vh - 200px);
+}
+p {
+  font-size: 1rem;
+}
+
+footer {
+  height: 80px;
+}
+
+.i {
+  font-size: 3rem;
+  color: white;
+  margin: 5px;
+}
+
+.i:hover {
+  color: var(--light);
+}
+.logo {
+  width: 80px;
+  height: 60px;
+}
+
+.bg-dark-test {
+  background-color: var(--dark);
+}
+
+.nav-link:hover {
+  color: var(--light);
+  border-bottom: 3px solid var(--coral);
+}
+
+.nav-link.active:hover {
+  border-bottom: none;
+}
+
+.profile-photo {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.nav {
+  height: 100px;
+}
+.img-container {
+  position: relative;
+}
+.img-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.3s ease;
+  background-color: gray;
+}
+
+.overlay:hover {
+  opacity: 0.5;
+}
+
+.icon {
+  color: white;
+  font-size: 1rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.projects {
+  color: white;
+  font-size: 3rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.projects a {
+  text-decoration: none;
+  color: white;
+}
+
+.projects a:hover {
+  color: var(--light);
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    width: 125px;
+    height: 100px;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  .form-label {
+    font-size: 1.5rem;
+  }
+
+  .btn {
+    font-size: 1.5rem;
+  }
 }
