--- a/src/Assets/styles/index.css
+++ b/src/Assets/styles/index.css
@@ -96,10 +96,12 @@ footer {
 }
 .img-container {
   position: relative;
+  width: 600px;
+  height: 400px;
 }
 .img-container img {
-  width: 100%;
-  height: 100%;
+  width: 600px;
+  height: 400px;
 }
 
 .overlay {
@@ -112,7 +114,7 @@ footer {
   width: 100%;
   opacity: 0;
   transition: 0.3s ease;
-  background-color: gray;
+  background-color: var(--coral);
 }
 
 .overlay:hover {
@@ -120,30 +122,30 @@ footer {
 }
 
 .icon {
-  color: white;
-  font-size: 1rem;
+  color: var(--dark);
+  font-size: 2rem;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  top: 25%;
+  left: 100%;
   text-align: center;
+  margin-left: 1rem;
 }
-
+.icon:hover {
+  color: var(--light);
+}
 .projects {
-  color: white;
-  font-size: 3rem;
+  color: var(--dark);
+  font-size: 2rem;
+  font-weight: 700;
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+  left: 25%;
   text-align: center;
 }
 
 .projects a {
   text-decoration: none;
-  color: white;
+  color: var(--dark);
 }
 
 .projects a:hover {
